--- a/src/template/main.scss
+++ b/src/template/main.scss
@@ -4,5 +4,6 @@
 @import './components/**/*.scss';
 
 @import '../configs/**/*.scss';
+@import '../pages/**/*.scss';
 
 @import '../customComponents/**/*.scss';
