--- a/src/configs/template/styleOverrides.scss
+++ b/src/configs/template/styleOverrides.scss
@@ -11,9 +11,9 @@
 #app {
   // --nav-bar-horizon-links-bg-color: var(--Primary) !important;
 }
-.scale--XXL,
-.scale--XL,
-.scale--L {
+:is(.scale--XXL, .scale--XL, .scale--L) {
+  // --contents-container-width: 1280rem !important;
+  // --contents-side-padding: 0 !important;
   // --nav-bar-height: 100rem !important;
   // --nav-bar-search-width: 300rem !important;
   // --nav-bar-header-gap: 36rem !important;
@@ -21,19 +21,25 @@
   // --nav-bar-categories-gap: 20rem !important;
 
 } .scale--M {
+  // --contents-container-width: 100% !important;
+  // --contents-side-padding: 40rem !important;
   // --nav-bar-height: 74rem !important;
   // --nav-bar-search-width: 300rem !important;
   // --nav-bar-header-gap: 36rem !important;
   // --router-link-vstack-nests-gap: 30rem !important;
 
 } .scale--S {
+  // --contents-container-width: 100% !important;
+  // --contents-side-padding: 30rem !important;
   // --nav-bar-height: 74rem !important;
   // --nav-bar-search-width: 160rem !important;
   // --nav-bar-header-gap: 28rem !important;
   // --router-link-vstack-nests-gap: 28rem !important;
 
-}.scale--XS,
-.scale--XXS {
+}
+:is(.scale--XS, .scale--XXS) {
+  // --contents-container-width: 100% !important;
+  // --contents-side-padding: 0 !important;
   // --nav-bar-height: 40rem !important;
 }
 
