--- a/src/template/styles/frame/_basics.scss
+++ b/src/template/styles/frame/_basics.scss
@@ -19,3 +19,14 @@ body, #app {
   width: 100vw;
   padding: 0; margin: 0;
 }
+
+ol {
+  padding: 0;
+  margin: 0;
+}
+li {
+  margin:0;
+  padding: 0;
+  text-indent: 0;
+  list-style-type: none;
+}
