--- a/src/template/styles/typography/_mixins.scss
+++ b/src/template/styles/typography/_mixins.scss
@@ -33,6 +33,9 @@
     @include Typeface($family, $regular);
     @include FontSquare($size, $lineHeight, $negateString, $letterSpace);
   }
+  .typo-header-#{$size}, .typo-header-#{$size} {
+    font-family: '#{$family} #{$regular}';
+  }
   .typo-header-#{$size}.--light, .typo-header-#{$size}--light {
     font-family: '#{$family} #{$light}';
   }
@@ -45,6 +48,9 @@
   .typo-body-#{$size}, .typo-body-#{$size}--light, .typo-body-#{$size}--bold {
     @include Typeface($family, $regular);
     @include FontSquare($size, $lineHeight, $negateString, $letterSpace);
+  }
+  .typo-body-#{$size}, .typo-body-#{$size} {
+    font-family: '#{$family} #{$regular}';
   }
   .typo-body-#{$size}.--light, .typo-body-#{$size}--light {
     font-family: '#{$family} #{$light}';
@@ -59,6 +65,9 @@
     @include Typeface($family, $regular);
     @include FontSquare($size, $lineHeight, $negateString, $letterSpace);
   }
+  .typo-caption-#{$size}, .typo-caption-#{$size} {
+    font-family: '#{$family} #{$regular}';
+  }
   .typo-caption-#{$size}.--light, .typo-caption-#{$size}--light {
     font-family: '#{$family} #{$light}';
   }
@@ -71,6 +80,9 @@
   .typo-mark-#{$size}, .typo-mark-#{$size}--light, .typo-mark-#{$size}--bold, .typo-mark-#{$size}--heavy {
     @include Typeface($family, $regular);
     @include FontSquare($size, $lineHeight, $negateString, $letterSpace);
+  }
+  .typo-mark-#{$size}, .typo-mark-#{$size} {
+    font-family: 'Archivo #{$regular}';
   }
   .typo-mark-#{$size}.--light, .typo-mark-#{$size}--light {
     font-family: 'Archivo #{$light}';
