--- a/src/configs/styles/colors.scss
+++ b/src/configs/styles/colors.scss
@@ -1,47 +1,103 @@
 /* @/configs/ui/_colors.scss */
 
 .theme--default-light {
+  --Primary: #4C8558;
+  --OnPrimary: #E5FFED;
+  --PrimaryContainer: #BCE0C6;
+  --OnPrimaryContainer: #1D4E25;
   
-  --Primary: #ff622e;
-  --Secondary: #005e4e;
+  --Secondary: #005E4E;
+  --OnSecondary: #DAF9FF;
+  --SecondaryContainer: #81F0E7;
+  --OnSecondaryContainer: #003326;
+  
+  --Tertiary: #4F6E92;
+  --OnTertiary: #F0F4FF;
+  --TertiaryContainer: #B9D3FF;
+  --OnTertiaryContainer: #27435B;
+  
   --Surface: #ffffff;
-  --OnSurface: #2d2d2d;
+  --OnSurface: #001D03;
+  
   --Background: #f0f0f0;
   --OnBackground: #161616;
-  --Error: #df1125;
-  --Warning: #e6b644;
-  --Positive: #5ebc62;
-
+  
+  --SurfaceVariant: #FFFEF0;
+  --OnSurfaceVariant: #5E5541;
+  
   --Shadow-1: rgba(0, 0, 0, 0.04);
   --Shadow-2: rgba(0, 0, 0, 0.08);
   --Shadow-3: rgba(0, 0, 0, 0.12);
   --Shadow-4: rgba(0, 0, 0, 0.16);
-}
-
-.theme--default-dark {
+  }
   
-  --Primary: #ff622e;
-  --Secondary: #005e4e;
+
+
+  .theme--default-dark {
+  --Primary: #4C8558;
+  --OnPrimary: #E5FFED;
+  --PrimaryContainer: #BCE0C6;
+  --OnPrimaryContainer: #1D4E25;
+  
+  --Secondary: #005E4E;
+  --OnSecondary: #DAF9FF;
+  --SecondaryContainer: #81F0E7;
+  --OnSecondaryContainer: #003326;
+  
+  --Tertiary: #4F6E92;
+  --OnTertiary: #F0F4FF;
+  --TertiaryContainer: #B9D3FF;
+  --OnTertiaryContainer: #27435B;
+  
   --Surface: #ffffff;
-  --OnSurface: #2d2d2d;
+  --OnSurface: #001D03;
+  
   --Background: #f0f0f0;
   --OnBackground: #161616;
-  --Error: #df1125;
-  --Warning: #e6b644;
-  --Positive: #5ebc62;
-
-
+  
+  --SurfaceVariant: #FFFEF0;
+  --OnSurfaceVariant: #5E5541;
   --Shadow-1: rgba(0, 0, 0, 0.04);
   --Shadow-2: rgba(0, 0, 0, 0.08);
   --Shadow-3: rgba(0, 0, 0, 0.12);
   --Shadow-4: rgba(0, 0, 0, 0.16);
-}
-
-
-body {
+  }
+  
+  // SYSTEM COLORS =====================
+  
+  .scheme--light {
+  --Error: #DF1125;
+  --OnError: #FFF0F0;
+  --ErrorContainer: #F7B9BC;
+  --OnErrorContainer: #AF0C1F;
+  --Warning: #E6B644;
+  --OnWarning: #FFFDF2;
+  --WarningContainer: #FFE391;
+  --OnWarningContainer: #876422;
+  --Positive: #5ebc62;
+  --OnPositive: #EDFFF0;
+  --PositiveContainer: #A4F5AB;
+  --OnPositiveContainer: #2c602a;
+  }
+  .scheme--dark {
+  --Error: #DF1125;
+  --OnError: #FFF0F0;
+  --ErrorContainer: #F7B9BC;
+  --OnErrorContainer: #AF0C1F;
+  --Warning: #E6B644;
+  --OnWarning: #FFFDF2;
+  --WarningContainer: #FFE391;
+  --OnWarningContainer: #876422;
+  --Positive: #5ebc62;
+  --OnPositive: #EDFFF0;
+  --PositiveContainer: #A4F5AB;
+  --OnPositiveContainer: #2c602a;
+  }
+  
+  body {
   background-color: var(--Background);
   color: var(--OnSurface);
-}
-a {
+  }
+  a {
   color: inherit;
-}
+  }
