--- a/src/template/main.scss
+++ b/src/template/main.scss
@@ -1,6 +1,7 @@
 @import './styles/**/*.scss';
 
 @import './atoms/**/*.scss';
+@import './blocks/**/*.scss';
 @import './components/**/*.scss';
 
 @import '../configs/**/*.scss';
