--- a/src/configs/styles/typography.scss
+++ b/src/configs/styles/typography.scss
@@ -8,13 +8,25 @@
 
 
 
-@include Header("Archivo", 48, 56, "-",   1, 600, 400, 800);
-@include Header("Archivo", 32, 40, "-",   1, 600, 400, 800);
-@include Header("Archivo", 28, 36, "-", 0.5, 600, 400, 800);
-@include Header("Archivo", 24, 32, "-", 0.5, 600, 400, 800);
+@include Header("Archivo", 50, 54, "-",   1, 600, 400, 800);
+@include Header("Archivo", 48, 52, "-",   1, 600, 400, 800);
+@include Header("Archivo", 46, 50, "-",   1, 600, 400, 800);
+@include Header("Archivo", 44, 48, "-",   1, 600, 400, 800);
+@include Header("Archivo", 42, 46, "-",   1, 600, 400, 800);
+@include Header("Archivo", 40, 44, "-",   1, 600, 400, 800);
+@include Header("Archivo", 38, 42, "-",   1, 600, 400, 800);
+@include Header("Archivo", 36, 40, "-",   1, 600, 400, 800);
+@include Header("Archivo", 34, 38, "-",   1, 600, 400, 800);
+@include Header("Archivo", 32, 36, "-",   1, 600, 400, 800);
+@include Header("Archivo", 30, 34, "-", 0.5, 600, 400, 800);
+@include Header("Archivo", 28, 32, "-", 0.5, 600, 400, 800);
+@include Header("Archivo", 26, 30, "-", 0.5, 600, 400, 800);
+@include Header("Archivo", 24, 28, "-", 0.5, 600, 400, 800);
+@include Header("Archivo", 22, 26, "-",   0, 600, 400, 800);
 @include Header("Archivo", 20, 24, "-",   0, 600, 400, 800);
+@include Header("Archivo", 18, 22, "-",   0, 600, 400, 800);
 @include Header("Archivo", 16, 20, "-",   0, 600, 400, 800);
-$headerSizes: 48, 32, 28, 24, 20, 16;
+$headerSizes: 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50;
 @each $size in $headerSizes {
   .typo-header-#{$size} {
     font-variation-settings:
