--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -118,9 +118,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    h1 { 
+    .title-pagesection { 
       flex-shrink: unset; 
-      padding: 0; 
       width: 100%;
     }
 
@@ -152,7 +151,7 @@
   gap: 30rem;
   height: 800rem;
   padding: 40rem 0 80rem 0;
-  h1 { padding-bottom: 22rem; }
+  .title-pagesection { margin-bottom: 22rem; }
   #trending-ad-0 { display: none; }
   .categories-wrapper {
     flex-grow: 1;
@@ -182,7 +181,7 @@
   height: 680rem;
   padding: 30rem 0 60rem 0;
   gap: 26rem;
-  h1 { padding-bottom: 20rem; }
+  .title-pagesection { padding-bottom: 20rem; }
   .categories-wrapper {
     #article-categories {
       gap: 8rem;
