--- a/src/template/components/RouterLink_VstackNest/_underlined.scss
+++ b/src/template/components/RouterLink_VstackNest/_underlined.scss
@@ -3,7 +3,7 @@
 
   @include PlateBackgroundOpacity(0);
 
-  @include PlateBorderBottom(2rem);
+  @include PlateBorderBottom(2rem solid var(--OnSurface));
   @include PlateBorderColor(var(--OnSurface));
   @include PlateBorderOpacity(0);
 }
