[NEW] flexgrid.scss

--- a/src/template/main.scss
+++ b/src/template/main.scss
@@ -3,6 +3,7 @@
 @import './atoms/**/*.scss';
 @import './blocks/**/*.scss';
 @import './components/**/*.scss';
+@import './classes/**/*.scss';
 
 @import '../configs/**/*.scss';
 @import '../pages/**/*.scss';
