--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -111,7 +111,6 @@
   justify-content: center;
   background-color: var(--Surface);
   width: 100%;
-  li {width: 100%; height: 100%;}
 
   .wrapper {
     display: flex;
@@ -123,107 +122,79 @@
       width: 100%;
     }
 
+    --item-gap: 10rem;
+
     .categories-wrapper {
       display: flex;
       flex-direction: column;
       #article-categories { 
         flex-grow: 1; 
         width: 100%;
-        display: grid;
-        justify-items: center;
-        align-items: center;
+        height: 100%;
+        gap: var(--item-gap);
       }
     }
+    
     .trending-wrapper {
       display: flex;
       flex-direction: column;
+      flex-shrink: 0;
       #trending-articles {
         display: flex;
         flex-grow: 1;
         flex-direction: column;
         justify-content: center;
-        li { flex-grow: 1; }
+        gap: var(--item-gap);
+        li { 
+          flex-grow: 1;
+        }
       }
     }
   }
 }
+
 :is(.scale--XXL, .scale--XL, .scale--L, .scale--M, .scale--S) .home #highlighted-articles #categegories-and-trending .wrapper {
   gap: 30rem;
   height: 800rem;
   padding: 40rem 0 80rem 0;
+
   .title-pagesection { margin-bottom: 22rem; }
   #trending-ad-0 { display: none; }
   .categories-wrapper {
     flex-grow: 1;
     height: 100%;
-    #article-categories {
-      gap: 30rem;
-      grid-template-columns: 
-      1fr 1fr 1fr;
-      grid-template-rows: 
-      1fr 1fr;
-    }
   }
   .trending-wrapper { 
     width: 300rem; 
     height: 100%;
-    flex-shrink: unset;
-    #trending-articles {
-      gap: 30rem;
-    }
   }
 }
+
 .scale--M .home #highlighted-articles #categegories-and-trending .wrapper {
   height: 730rem;
   padding: 36rem 0 74rem 0;
 }
+
 .scale--S .home #highlighted-articles #categegories-and-trending .wrapper {
-  height: 680rem;
+  height: 880rem;
   padding: 30rem 0 60rem 0;
   gap: 26rem;
   .title-pagesection { padding-bottom: 20rem; }
-  .categories-wrapper {
-    #article-categories {
-      gap: 8rem;
-      grid-template-columns: 
-      1fr 1fr;
-      grid-template-rows: 
-      1fr 1fr 1fr;
-    }
-  }
-  .trending-wrapper {
-    #trending-articles {
-      gap: 8rem;
-    }
-  }
 }
-.scale--XS .home #highlighted-articles #categegories-and-trending .wrapper {
+
+:is(.scale--XS, .scale--XXS) .home #highlighted-articles #categegories-and-trending .wrapper {
   flex-direction: column;
-  height: 1400rem;
+  height: 1720rem;
   padding: 40rem 0 60rem 0;
   gap: 40rem;
-  h1 { padding-bottom: 20rem; }
   .categories-wrapper {
     width: 100%;
     padding: 0 26rem 0 26rem;
     flex-grow: 1.8;
-    #article-categories {
-      gap: 8rem;
-      grid-template-columns: 
-      1fr 1fr;
-      grid-template-rows: 
-      1fr 1fr 1fr;
-    }
   }
   .trending-wrapper { 
     width: 100%; 
     padding: 0 26rem 0 26rem;
     flex-grow: 1; 
-    #trending-articles {
-      gap: 20rem;
-    }
   }
 }
-
-
-
