--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -31,6 +31,8 @@
       padding-left: var(--contents-side-padding);
       padding-right: var(--contents-side-padding);
     }
+
+    padding-bottom: 400rem;
   }
 }
 
