--- a/src/template/components/PageNav/_style.scss
+++ b/src/template/components/PageNav/_style.scss
@@ -51,7 +51,8 @@
     flex-grow: 0;
     width: 100%;
     max-width: 500rem;
-    justify-content: space-between;
+    // justify-content: space-between;
+    justify-content: space-around;
   }
 
   .dots {
