--- a/src/template/components/ArticleCard_Searched_A/style.scss
+++ b/src/template/components/ArticleCard_Searched_A/style.scss
@@ -1,6 +1,7 @@
 /** @/template/components/ArticleCard_A/_style.scss */
 
-:is(.scale--XXL, .scale--XL, .scale--L) .article-card-a{
+
+:is(.scale--XXL, .scale--XL, .scale--L) .article-card-searched-a{
   --article-card-flex-dir: row;
   --article-card-height: 200rem;
   --image-box-width: 240rem;
@@ -14,7 +15,7 @@
   p.description { @extend .typo-body-14; }
   
 }
-:is(.scale--M) .article-card-a{
+:is(.scale--M) .article-card-searched-a{
   --article-card-flex-dir: row;
   --article-card-height: 188rem;
   --image-box-width: 194rem;
@@ -28,7 +29,7 @@
   p.description { @extend .typo-body-14; }
   
 }
-:is(.scale--S) .article-card-a{
+:is(.scale--S) .article-card-searched-a{
   --article-card-flex-dir: row;
   --article-card-height: 174rem;
   --image-box-width: 100rem;
@@ -42,7 +43,7 @@
   p.description { @extend .typo-body-13; }
   
 }
-:is(.scale--XS, .scale--XXS) .article-card-a{
+:is(.scale--XS, .scale--XXS) .article-card-searched-a{
   --article-card-flex-dir: column;
   --article-card-height: 400rem;
   --image-box-width: 100%;
@@ -57,7 +58,7 @@
 }
 
 
-.article-card-a {
+.article-card-searched-a {
   display: flex;
   flex-direction: var(--article-card-flex-dir);
   width: 100%;
@@ -119,20 +120,21 @@
 
 
 
-.article-card-a {
+.article-card-searched-a {
   color: var(--OnSurface);
   background-color: var(--Surface);
   @include PlateBackgroundColor(var(--Primary));
   @include PlateBackgroundOpacity(0.02);
   @include PlateTransition(200ms);
 }
-.article-card-a:hover {
+.article-card-searched-a:hover {
   color: var(--OnPrimaryContainer);
   @include Shadow-2(10rem);
   @include PlateBackgroundColor(var(--PrimaryContainer));
   @include PlateBackgroundOpacity(1);
   transform: scale(1.01);
 }
+
 
 
 
