Categories And Trending Build

--- a/src/configs/styles/colors.scss
+++ b/src/configs/styles/colors.scss
@@ -11,10 +11,10 @@
   --SecondaryContainer: #F0E2D3;
   --OnSecondaryContainer: #402111;
   
-  --Tertiary: #4F6E92;
-  --OnTertiary: #F0F4FF;
-  --TertiaryContainer: #B9D3FF;
-  --OnTertiaryContainer: #27435B;
+  --Tertiary: #5F9EA0;
+  --OnTertiary: #EBFDFF;
+  --TertiaryContainer: #9BC9CC;
+  --OnTertiaryContainer: #1B403D;
   
   --Surface: #ffffff;
   --OnSurface: #001D03;
@@ -44,10 +44,10 @@
     --SecondaryContainer: #F0E2D3;
     --OnSecondaryContainer: #402111;
     
-    --Tertiary: #4F6E92;
-    --OnTertiary: #F0F4FF;
-    --TertiaryContainer: #B9D3FF;
-    --OnTertiaryContainer: #27435B;
+    --Tertiary: #5F9EA0;
+    --OnTertiary: #EBFDFF;
+    --TertiaryContainer: #9BC9CC;
+    --OnTertiaryContainer: #1B403D;
     
     --Surface: #ffffff;
     --OnSurface: #001D03;
