--- a/src/configs/styles/typography.scss
+++ b/src/configs/styles/typography.scss
@@ -28,7 +28,7 @@
 @include Header("Archivo", 16, 20, "-",   0, 600, 400, 800);
 $headerSizes: 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50;
 @each $size in $headerSizes {
-  .typo-header-#{$size} {
+  .typo-header-#{$size}, .typo-header-#{$size}--bold, .typo-header-#{$size}--light {
     font-variation-settings:
       'wdth' 120;
   }
