--- a/src/template/components/NavBar_HorizonLinks/style.scss
+++ b/src/template/components/NavBar_HorizonLinks/style.scss
@@ -1,5 +1,58 @@
 /* components/NavBar_Editorial */
 
+#app {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  align-items: center;
+  width: 100%;
+
+  #navigation { 
+    flex-shrink: unset;
+    z-index: 100;
+    position: fixed;
+    top: 0;
+  }
+  #router-page { 
+    flex-grow: 1;
+    z-index: 0;
+    width: 100%;
+  }
+}
+
+
+:is(.scale--XXL, .scale--XL, .scale--L) {
+  --contents-container-width: 1300rem;
+  --contents-side-padding: 0;
+  --nav-bar-height: 74rem;
+  --nav-bar-search-width: 300rem;
+  --nav-bar-header-gap: 36rem;
+  --router-link-vstack-nests-gap: 26rem;
+  --nav-bar-categories-gap: 20rem;
+}
+.scale--M {
+  --contents-container-width: 100%;
+  --contents-side-padding: 40rem;
+  --nav-bar-height: 74rem;
+  --nav-bar-search-width: 300rem;
+  --nav-bar-header-gap: 36rem;
+  --router-link-vstack-nests-gap: 30rem;
+}
+.scale--S {
+  --contents-container-width: 100%;
+  --contents-side-padding: 30rem;
+  --nav-bar-height: 74rem;
+  --nav-bar-search-width: 160rem;
+  --nav-bar-header-gap: 28rem;
+  --router-link-vstack-nests-gap: 28rem;
+}
+:is(.scale--XS, .scale--XXS){
+  --contents-container-width: 100%;
+  --contents-side-padding: 16rem;
+  --nav-bar-height: 40rem;
+}
+
+
 .scale--XXL #app .nav-bar-horizon-links,
 .scale--XL #app .nav-bar-horizon-links,
 .scale--L #app .nav-bar-horizon-links {
@@ -54,9 +107,13 @@
 
   @include PlateBackgroundColor(var(--nav-bar-horizon-links-bg-color));
   @include PlateBackgroundOpacity(0);
+  @include PlateBorderBottom(2rem solid var(--OnSurface));
+  @include PlateBorderOpacity(0.08);
   @include PlateTransition(120ms);
 }
 #app .nav-bar-horizon-links.--scrolled {
+  @include PlateBorderBottom(1rem solid var(--OnSurface));
+  @include PlateBorderOpacity(0.16);
   @include PlateBackgroundOpacity(1);
   @include Shadow-3(20rem);
 }
