--- a/src/template/atoms/Icon/_style.scss
+++ b/src/template/atoms/Icon/_style.scss
@@ -1,11 +1,14 @@
 /* atoms/Icon */
 
+.icon span {
+  user-select: none;
+}
+
 @mixin IconColor($color) {
   .icon span {
     color: var(#{$color});
   }
 }
-
 
 // DEPRECATED ---------------
 // Replaced by props injection.
