--- a/src/pages/Search/style.scss
+++ b/src/pages/Search/style.scss
@@ -1,50 +1,31 @@
+/** @/pages/Search/style.scss */
 
-#router-page.search {
-  --fronthead-height: 360rem
-}
-:is(.scale--XXL) #router-page.search {
-  --body-direction: row;
-  --body-gap: 30rem;
-  --ad-tower-width: 300rem;
-  --articles-gap: 36rem;
-}
-:is(.scale--XL) #router-page.search {
-  --body-direction: row;
-  --body-gap: 30rem;
-  --ad-tower-width: 300rem;
-  --articles-gap: 36rem;
-}
-:is(.scale--L) #router-page.search {
-  --body-direction: row;
-  --body-gap: 30rem;
-  --ad-tower-width: 300rem;
-  --articles-gap: 36rem;
-}
-:is(.scale--M) #router-page.search {
-  --body-direction: row;
-  --body-gap: 30rem;
-  --ad-tower-width: 160rem;
-  --articles-gap: 32rem;
+:is(.scale--XXL, .scale--XL, .scale--L, .scale--M) #router-page.search {
+  --input-font-size: 84rem;
+  --input-font-size-scrolled: 32rem;
 }
 :is(.scale--S) #router-page.search {
-  --body-direction: row;
-  --body-top-bottom-paddings: 50rem;
-  --body-gap: 30rem;
-  --ad-tower-width: 160rem;
-  --articles-gap: 30rem;
+  --input-font-size: 68rem;
+  --input-font-size-scrolled: 28rem;
 }
 :is(.scale--XS, .scale--XXS) #router-page.search {
-  --body-direction: column;
-  --body-top-bottom-paddings: 50rem;
-  --body-gap: 38rem;
-  --body-direction: column;
-  --ad-tower-width: 100%;
-  --articles-gap: 24rem;
+  --input-font-size: 36rem;
+  --input-font-size-scrolled: 20rem;
 }
 
+.page--search #app .nav-bar-horizon-links {
+  @include PlateBorderOpacity(0.08);
+  @include PlateBackgroundOpacity(0);
+}
 
-
-
+#router-page.search #fronthead {
+  transition: 220ms;
+  font-size: var(--input-font-size);
+}
+#router-page.search #fronthead.--scrolled {
+  font-size: var(--input-font-size-scrolled);
+  @include Shadow-2(20rem);
+}
 
 #router-page.search {
   display: flex;
@@ -56,45 +37,67 @@
 
     section#fronthead {
       width: 100%;
-      height: var(--fronthead-height);
-      padding-top: calc(var(--nav-bar-height));
+      height: fit-content;
+      padding-top: var(--nav-bar-height);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      
       background-color: var(--PrimaryContainer);
+
       display: flex;
       flex-direction: column;
+      justify-content: flex-end;
+      align-content: center;
+      align-items: center;
     }
 
-    section#body {
-      align-self: center;
-      width: var(--contents-container-width);
+    section#results {
+      width: 100%;
       height: fit-content;
+      position: relative;
+      z-index: 0;
       display: flex;
-      flex-direction: var(--body-direction);
-      gap: var(--body-gap);
+      flex-direction: column;
       justify-content: center;
-      padding: 
-      var(--body-top-bottom-paddings)
-      var(--body-contents-side-padding);
-      #search-result{
-        display: flex;
-        flex-direction: column;
-        gap: var(--articles-gap);
-        padding: 0 var(--side-gap);
-        #searched-articles-list {
-          display: flex;
-          flex-direction: column;
-          gap: var(--articles-gap);
-        }
-      }
-      #ad-tower {
-        flex-shrink: 0;
-        width: var(--ad-tower-width);
-        background-color: cornflowerblue;
-      }
     }
   }
 }
 
+#router-page.search #fronthead 
+form#search-billboard-form {
+  width: var(--contents-container-width);
+  height: fit-content;
+  padding: 0 var(--contents-side-padding);
+  margin: 0.48em 0;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
+
+  .head-text {
+    @extend .typo-mark-14;
+    @extend .--caps;
+  }
+
+  input[type=text] {
+    color: var(--OnPrimaryContainer);
+    @extend .typo-header-68;
+    font-size: inherit;
+    background-color: #ffffff00;
+    border: none;
+    border-bottom: 3rem solid var(--OnPrimaryContainer);
+  }
+}
 
 
+// ============ LOGO
+#router-page.search #fronthead {
+  position: relative;
+  overflow: hidden;
 
-
+  .brand-logo {
+    position: absolute;
+    opacity: 0.12;
+  }
+}
