--- a/src/configs/styles/font/Archivo.css
+++ b/src/configs/styles/font/Archivo.css
@@ -47,6 +47,12 @@
 }
 
 @font-face {
+  font-family: "Archivo 500";
+  font-weight: 500;
+  src: url('./Archivo/Archivo-VariableFont_wdth,wght.ttf') format('truetype');
+}
+
+@font-face {
   font-family: "Archivo 600";
   font-weight: 600;
   src: url('./Archivo/Archivo-VariableFont_wdth,wght.ttf') format('truetype');
