--- a/src/template/components/NavBar_HorizonLinks/style.scss
+++ b/src/template/components/NavBar_HorizonLinks/style.scss
@@ -25,6 +25,7 @@
   --contents-container-width: 1300rem;
   --contents-side-padding: 0;
   --nav-bar-height: 74rem;
+  --nav-bar-logo-width: 160rem;
   --nav-bar-search-width: 300rem;
   --nav-bar-header-gap: 36rem;
   --router-link-vstack-nests-gap: 26rem;
@@ -34,6 +35,7 @@
   --contents-container-width: 100%;
   --contents-side-padding: 40rem;
   --nav-bar-height: 74rem;
+  --nav-bar-logo-width: 160rem;
   --nav-bar-search-width: 300rem;
   --nav-bar-header-gap: 36rem;
   --router-link-vstack-nests-gap: 30rem;
@@ -42,6 +44,7 @@
   --contents-container-width: 100%;
   --contents-side-padding: 30rem;
   --nav-bar-height: 74rem;
+  --nav-bar-logo-width: 140rem;
   --nav-bar-search-width: 160rem;
   --nav-bar-header-gap: 28rem;
   --router-link-vstack-nests-gap: 28rem;
@@ -122,7 +125,7 @@
   font-size: 0;
 
   .nav-logo svg {
-    width: 160rem;
+    width: var(--nav-bar-logo-width);
     height: 100%;
     path { fill: var(--OnBackground); }
   }
